@@ -61,21 +61,24 @@ public class ReversiGame implements TwoPlayerGame {
     protected int simplePointCalculate(ReversiTable table) {
         numFirstPlayer = 0;
         numSecondPlayer = 0;
+        pointFirstPlayer = 0;
+        pointSecondPlayer = 0;
         for( int i=0; i<J2MEReversi.SIZE; ++i ) {
             for( int j=0; j<J2MEReversi.SIZE; ++j ) {
                 int item = table.getItem(i,j);
                 switch( item ) {
                 case 1: 
                     ++numFirstPlayer;
+                    pointFirstPlayer += heurMatrix[i][j];
                     break;
                 case 2:
                     ++numSecondPlayer;
+                    pointSecondPlayer += heurMatrix[i][j];
                     break;                    
                 }
             }
         }
-        // TODO: use heuristic
-        return numFirstPlayer - numSecondPlayer;
+        return pointFirstPlayer - pointSecondPlayer;
     }
 
     public Table turn(Table table, byte player, Move move) {
@@ -167,5 +170,17 @@ public class ReversiGame implements TwoPlayerGame {
     protected int numFirstPlayer;
     protected int numSecondPlayer;
     
+    protected int pointFirstPlayer;
+    protected int pointSecondPlayer;
+
+    protected int[][] heurMatrix = { 
+                                  {15,1,8,8,8,8,1,15},
+				  {1,2,5,4,4,5,2,1},
+				  {8,5,6,6,6,6,5,8},
+				  {8,4,6,6,6,6,4,8},
+				  {8,4,6,6,6,6,4,8},
+				  {8,5,6,6,6,6,5,8},
+				  {1,2,5,4,4,5,2,1},
+				  {15,1,8,8,8,8,1,15} };
 } // ReversiGame
 
