@@ -5,6 +5,7 @@
 -Icon
 -Using Ant build tool
 -Optional use of obfuscator (retroguard-1.1)
+-Using heuristic point calculation
 
 0.62.00 2002-SEP-28
 
